Salesforce CPQ/main/default/objects/PriceSchedule__c/PriceSchedule__c.object-meta.xml
<CustomObject>
    <customHelpPage>PriceScheduleHelp</customHelpPage>
    <description>Volume Price Schedule that applies automatic discounts based on quantity.</description>
    <label>Price Schedule</label>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>