Salesforce CPQ/main/default/objects/PriceSchedule__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that this Price Schedule applies to. Only used in combination with Price Schedule Override on Quote Line Editor UI.</description>
    <inlineHelpText>Account that this Price Schedule applies to. Only used in combination with Price Schedule Override on Quote Line Editor UI.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Schedules</relationshipLabel>
    <relationshipName>PriceSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>