Salesforce CPQ/main/default/objects/PriceSchedule__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description for this Price Schedule.</description>
    <inlineHelpText>Description for this Price Schedule.</inlineHelpText>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>