Salesforce CPQ/main/default/objects/PriceSchedule__c/fields/DiscountUnit__c.field-meta.xml
<CustomField>
    <fullName>DiscountUnit__c</fullName>
    <description>This is the Discount Unit for the Price Schedule.</description>
    <inlineHelpText>Specify the Discount Unit: Amount or Percent.</inlineHelpText>
    <label>Discount Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
                <default>true</default>
                <label>Percent</label>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>