Salesforce CPQ/main/default/objects/PriceSchedule__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order product that this Price Schedule applies to.</description>
    <inlineHelpText>Order product that this Price Schedule applies to.</inlineHelpText>
    <label>Order Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select Order Products of the associated order.</errorMessage>
        <filterItems>
            <field>OrderItem.OrderId</field>
            <operation>equals</operation>
            <valueField>$Source.Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Price Schedules</relationshipLabel>
    <relationshipName>PriceSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>