Salesforce CPQ/main/default/objects/PriceSchedule__c/fields/OriginalDiscountSchedule__c.field-meta.xml
<CustomField>
    <fullName>OriginalDiscountSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The discount schedule that this price schedule is originated from.</description>
    <inlineHelpText>The discount schedule that this price schedule is originated from.</inlineHelpText>
    <label>Original Discount Schedule</label>
    <referenceTo>DiscountSchedule__c</referenceTo>
    <relationshipLabel>Price Schedules</relationshipLabel>
    <relationshipName>PriceSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>