Salesforce CPQ/main/default/objects/PriceSchedule__c/fields/PriceScale__c.field-meta.xml
<CustomField>
    <fullName>PriceScale__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Decimal places for prices produced by this Price Schedule.</description>
    <inlineHelpText>Decimal places for prices produced by this Price Schedule.</inlineHelpText>
    <label>Price Scale</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>