Salesforce CPQ/main/default/objects/PriceSchedule__c/fields/PriceType__c.field-meta.xml
<CustomField>
    <fullName>PriceType__c</fullName>
    <description>The price type that determines how the prices or discounts are calculated.</description>
    <inlineHelpText>The price type that determines how the prices or discounts are calculated.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PriceType</valueSetName>
    </valueSet>
</CustomField>