Salesforce CPQ/main/default/objects/PriceSchedule__c/fields/UsePriceForAmount__c.field-meta.xml
<CustomField>
    <fullName>UsePriceForAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the user defined Price Schedule&apos;s Discount Unit will be set to Price.</description>
    <inlineHelpText>If checked, the user defined Price Schedule&apos;s Discount Unit will be set to Price.</inlineHelpText>
    <label>Use Price For Amount</label>
    <type>Checkbox</type>
</CustomField>